# secret-santa

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  yoyo.ini
migrations/: 20240104_01_jaUzs-init-tables.py
src/: db.py  main.py  repository.py
src/core/: config.py  exception.py
src/domain/: model.py
src/tg/: __init__.py  router.py
src/tg/elements/: __init__.py  base.py  buttons.py  data.py  keyboards.py  messages.py
src/tg/handlers/: admin_santa.py  common.py  create_santa.py
src/tg/utils/: context.py  tg_calendar.py
